--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.18",
+    "@mui/material": "^5.15.18",
+    "@mui/utils": "^5.15.14",
+    "@reduxjs/toolkit": "^2.2.5",
+    "axios": "^1.7.1",
+    "gapi-script": "^1.2.0",
+    "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-google-login": "^5.2.2",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "eslint": "^8",
