--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.1",
     "gapi-script": "^1.2.0",
+    "gh-pages": "^6.1.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
