--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "posttfig",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://Datoshi96.github.io/postfig",
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
